Chore: expand documentation and debugging config

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -23,7 +23,11 @@
             "module": "uvicorn",
             "args": [
                 "app:app",
-                "--reload"
+                "--reload",
+                "--host",
+                "0.0.0.0",
+                "--port",
+                "8080"
             ],
             "jinja": true,
             "justMyCode": true
